k8s/demo-pod-hw7.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pink
  namespace: demo
  labels:
    app: pink-app
spec:
  containers:
  - name: pink-container
    image: opazyniuk/python-app:hw-5
    ports:
    - containerPort: 5000
