k8s/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo
  labels:
    app: demo-app
  annotations:
    promtail.io/scrape: "true"
    promtail.io/path: "/var/log/containers/*${POD_NAME}*.log"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-container
        image: opazyniuk/python-app:hw-8
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
          - name: static
            mountPath: /app/static
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: demo-static-pvc
