k8s/deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v1
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  template:
    metadata:
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
        - name: app
          image: opazyniuk/python-app:hw-5
          ports:
            - containerPort: 5000
