k8s/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      securityContext:
          runAsUser: 0  
      containers:
        - name: loki
          image: grafana/loki:2.9.3
          args:
            - -config.file=/etc/loki/loki-config.yaml
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-storage
              mountPath: /loki
            - name: config
              mountPath: /etc/loki
      volumes:
        - name: loki-storage
          persistentVolumeClaim:
            claimName: loki-pvc
        - name: config
          configMap:
            name: loki-config
