k8s/svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-v1
  namespace: demo
spec:
  selector:
    app: demo-app
    version: v1
  ports:
    - port: 80
      targetPort: 5000
