k8s/ingress-versions.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - demo.local
        - v1.demo.local
      secretName: demo-local-tls
  rules:
    - host: demo.local
      http:
        paths:
          # https://demo.local/v1 → demo-app-v1
          - path: /v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-app-v1
                port:
                  number: 80
          # https://demo.local/... → demo-service (v2)
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80

    - host: v1.demo.local
      http:
        paths:
          # https://v1.demo.local → demo-app-v1
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-app-v1
                port:
                  number: 80
